--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci-cd.yml
 name: CI/CD Pipeline
 
 on:
@@ -29,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./docker/kafka-producer/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/kafka-producer:latest
 
@@ -37,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./docker/kafka-consumer/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/kafka-consumer:latest
 
@@ -45,13 +44,17 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./docker/nlp-app/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/nlp-app:latest
 
-      # Optional: Run docker-compose up to validate containers
+      - name: Install docker-compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Run docker-compose
         run: |
-          docker-compose -f docker-compose.yml up -d
-          sleep 20
+          docker-compose up -d
+          sleep 30
           docker ps
