--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,8 +21,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and push Kafka Producer image
         uses: docker/build-push-action@v4
@@ -30,7 +30,7 @@ jobs:
           context: .
           file: ./docker/kafka-producer/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/kafka-producer:latest
+          tags: ghcr.io/momkhan1/enterprise-ai-nlp-solution/kafka-producer:latest
 
       - name: Build and push Kafka Consumer image
         uses: docker/build-push-action@v4
@@ -38,7 +38,7 @@ jobs:
           context: .
           file: ./docker/kafka-consumer/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/kafka-consumer:latest
+          tags: ghcr.io/momkhan1/enterprise-ai-nlp-solution/kafka-consumer:latest
 
       - name: Build and push NLP App image
         uses: docker/build-push-action@v4
@@ -46,16 +46,4 @@ jobs:
           context: .
           file: ./docker/nlp-app/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/nlp-app:latest
-
-      - name: Install docker-compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Run docker-compose
-        run: |
-          docker-compose up -d
-          echo "Waiting for PostgreSQL and Kafka to be healthy..."
-          sleep 60
-          docker ps
+          tags: ghcr.io/momkhan1/enterprise-ai-nlp-solution/nlp-app:latest
