--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
   # -----------------
   kafka-producer:
     build: .
+    image: ghcr.io/momkhan1/kafka-producer:latest
     container_name: kafka_producer
     restart: always
     depends_on:
@@ -120,6 +121,7 @@ services:
   # -----------------
   kafka-consumer:
     build: .
+    image: ghcr.io/momkhan1/kafka-consumer:latest
     container_name: kafka_consumer
     restart: always
     depends_on:
@@ -165,7 +167,7 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
     volumes:
-      - ./airflow/dags:/opt/airflow/dags   # ✅ corrected path
+      - ./airflow/dags:/opt/airflow/dags
 
   airflow-webserver:
     image: apache/airflow:2.7.2
@@ -180,7 +182,7 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
     volumes:
-      - ./airflow/dags:/opt/airflow/dags   # ✅ corrected path
+      - ./airflow/dags:/opt/airflow/dags
     command: webserver
 
   airflow-scheduler:
@@ -194,7 +196,7 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
     volumes:
-      - ./airflow/dags:/opt/airflow/dags   # ✅ corrected path
+      - ./airflow/dags:/opt/airflow/dags
     command: scheduler
 
 volumes:
