--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,47 +3,33 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Kafka Producer image
+      - name: Build and push Kafka Producer
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./docker/kafka-producer/Dockerfile
+          file: ./Dockerfile   # ✅ use the root Dockerfile
           push: true
           tags: ghcr.io/momkhan1/enterprise-ai-nlp-solution/kafka-producer:latest
 
-      - name: Build and push Kafka Consumer image
+      - name: Build and push Kafka Consumer
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./docker/kafka-consumer/Dockerfile
+          file: ./Dockerfile   # ✅ same root Dockerfile
           push: true
           tags: ghcr.io/momkhan1/enterprise-ai-nlp-solution/kafka-consumer:latest
-
-      - name: Build and push NLP App image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./docker/nlp-app/Dockerfile
-          push: true
-          tags: ghcr.io/momkhan1/enterprise-ai-nlp-solution/nlp-app:latest
