--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ "main" ]   # Change if your default branch is not 'main'
 
+permissions:
+  contents: read
+  packages: write   # 👈 required for pushing to GHCR
+
 jobs:
   build:
     runs-on: ubuntu-latest
